fix: inverted constructor args